CHANGES
*******

1.0b2 (unreleased)
==================

* Unfortunately ``<element>``, ``<attribute>`` and ``<block>`` did not
  work well in IE. Instead you can now use ``data-el``, ``data-attr``
  and ``data-unwrap`` on any DOM element.

* Introduce ``data-handler`` directive to hook up events directly from
  template. With Obviel, this will hook up events to view directly.

1.0b (2012-05-31)
=================

* Added Obviel Template language implementation. This replaces
  JSON-Template as Obviel's preferred template language. Obviel Forms
  makes use of it internally. Obviel Template supports features such
  as sub-views and i18n. See the :doc:`Obviel Template documentation
  <template>` for more detail.

* :doc:`i18n documentation <i18n>`: how to do i18n with Obviel.

* Added Traject library. This library allows routing of paths to
  objects and the inverse: constructing paths for objects. See the
  :doc:`Traject documentation <traject>` for more detail.

* Added ``transformer`` hook. This allows Obviel to transform content
  it retrieves from the server using URLs and hyperlinks.

* Added ``object_events`` structure, allowing you to declare events on
  the object the view is rendering. Also introduce ``rerender`` method
  on view.

* Added ``before`` hook to views. You can now pass a ``before``
  function when configuring a view. This function will be called
  before rendering (including before template rendering). This is useful
  to manipulate ``this.obj`` to add extra information before the template
  is rendered.

* Obviel Forms now uses a special view for the iface
  ``obviel_forms_error_area`` to render error areas. You can define a
  view and render your own error area. In this view create an element
  with id ``this.obj.field_error_id`` to hold the field error message,
  and an element with id ``this.obj.global_error_id`` to hold the
  global error message.
  
* Obviel Forms now sends an event soon as an error message is set or